--- a/source/less/global.less
+++ b/source/less/global.less
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  @include roboto-regular(14px, 24px, $text-black);
+  .roboto-regular(14px, 24px, @text-black);
 
   min-width: 320px;
   margin: 0;
