add slider and menu open scripts

--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -56,12 +56,10 @@
 
   .feedback__items {
     display: flex;
-
-    overflow: hidden;
   }
 }
 
-@media (min-width: @tablet-width) {
+@media (min-width: @desktop-width) {
   .feedback {
     padding: 84px 0 30px;
   }
@@ -75,6 +73,6 @@
   }
 
   .feedback__items {
-    margin-bottom: 13px;
+    margin-bottom: 33px;
   }
 }
