--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,6 +4,7 @@
 @import "visually-hidden.less";
 @import "global.less";
 @import "button.less";
+@import "swiper.less";
 //blocks
 @import "blocks/container.less";
 @import "blocks/section-title.less";
