--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -4,19 +4,13 @@
   background-color: #f8f8f8;
 }
 
-.features__slides {
-  position: relative;
-}
-
 .features__slide {
-  &--hidden {
-    display: none;
-  }
+  position: relative;
 }
 
 .features__button {
   position: absolute;
-  top: 50%;
+  bottom: 50%;
   right: 50%;
 
   width: 69px;
@@ -25,7 +19,7 @@
   background-image: url("../img/play-icon.png");
   background-repeat: no-repeat;
 
-  transform: translate(50%, -50%);
+  transform: translate(50%, 50%);
 }
 
 .features__info {
@@ -57,7 +51,7 @@
   }
 
   .features__button {
-    top: 611px;
+    bottom: 34px;
     right: 88px;
 
     transform: translate(0, 0);
