--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -4,8 +4,6 @@
   display: flex;
   justify-content: space-between;
   padding: 10px 0;
-
-  border-bottom: 1px solid #000000;
 }
 
 .header__logo {
@@ -37,6 +35,7 @@
   background-color: #000000;
 
   transform: translateY(-50%);
+  transition: 0.001s;
 
   &::before,
   &::after {
@@ -47,6 +46,7 @@
     height: 100%;
 
     background-color: #000000;
+    transition: 0.3s;
   }
 
   &::before {
@@ -56,12 +56,28 @@
   &::after {
     transform: translate(0, 8px);
   }
+
+  &--active {
+    background-color: transparent;
+
+    &::before {
+      transform: rotate(45deg);
+    }
+
+    &::after {
+      transform: rotate(-45deg);
+    }
+  }
 }
 
 .header__contacts {
   padding: 10px 0;
 
   background-color: #f5f5f5;
+
+  &--hidden {
+    display: none;
+  }
 }
 
 .header__contacts-text {
@@ -120,6 +136,10 @@
 
   .header__contacts {
     padding: 19px 0 13px;
+
+    &--hidden {
+      display: block;
+    }
   }
 
   .header__contacts-container {
