--- a/source/less/blocks/works.less
+++ b/source/less/blocks/works.less
@@ -34,6 +34,11 @@
   .roboto-regular(14px, 24px, #212121);
 
   margin: 0 10px;
+
+  &--active {
+    color: @orange;
+    text-decoration: underline;
+  }
 }
 
 .works__gallery {
