add pokemon script

--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -83,6 +83,10 @@
 
   background-image: url("../img/search-icon.png");
   background-repeat: no-repeat;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 @media (min-width: @tablet-width) {
