--- a/source/less/blocks/partners.less
+++ b/source/less/blocks/partners.less
@@ -15,17 +15,21 @@
 
   &:hover {
     opacity: 1;
+    cursor: pointer;
   }
 
   &:nth-child(1) {
     width: 180px;
   }
+
   &:nth-child(2) {
     width: 164px;
   }
+
   &:nth-child(3) {
     width: 145px;
   }
+
   &:nth-child(4) {
     width: 148px;
   }
@@ -49,11 +53,13 @@
     &:nth-child(1) {
       margin-right: 77px;
     }
+
     &:nth-child(2) {
       margin-right: 96px;
     }
+
     &:nth-child(3) {
-     margin-right: 103px;
+      margin-right: 103px;
     }
   }
 }
