--- a/source/less/blocks/work.less
+++ b/source/less/blocks/work.less
@@ -63,6 +63,15 @@
   background-color: @orange;
   background-repeat: no-repeat;
   background-position: center center;
+
+  &:hover,
+  &:focus {
+    background-color: #dda200;
+  }
+
+  &:active {
+    opacity: 0.8;
+  }
 }
 
 @media (min-width: @tablet-width) {
