--- a/source/less/blocks/works.less
+++ b/source/less/blocks/works.less
@@ -35,6 +35,15 @@
 
   margin: 0 10px;
 
+  &:hover,
+  &:focus {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.4;
+  }
+
   &--active {
     color: @orange;
     text-decoration: underline;
