--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -20,6 +20,10 @@
   background-repeat: no-repeat;
 
   transform: translate(50%, 50%);
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .features__info {
