--- a/source/less/button.less
+++ b/source/less/button.less
@@ -18,7 +18,7 @@
 
   &:hover,
   &:focus {
-    box-shadow: 2px 2px 5px 5px rgba(0, 0, 0, 0.2);
+    background-color: #dda200;
   }
 
   &:active {
