--- a/source/less/swiper.less
+++ b/source/less/swiper.less
@@ -1,4 +1,4 @@
-.swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet {
+.swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
   margin: 0 3px;
 }
 
@@ -7,7 +7,13 @@
   height: 9px;
   opacity: 1;
   background: #f1f1f1;
+
+  &:hover,
+  &:focus {
+    background-color: #dddddd;
+  }
 }
+
 .swiper-pagination-bullet-active {
   background-color: @orange;
 }
