add transition to interactive elements

--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -185,4 +185,17 @@
   .header__button {
     display: none;
   }
+
+  .header__contact {
+    transition: 0.2s;
+
+    &:hover,
+    &:focus {
+      opacity: 0.7;
+    }
+
+    &:active {
+      opacity: 0.4;
+    }
+  }
 }
