--- a/source/less/blocks/work.less
+++ b/source/less/blocks/work.less
@@ -64,8 +64,11 @@
   background-repeat: no-repeat;
   background-position: center center;
 
+  transition: 0.2s;
+
   &:hover,
   &:focus {
+    cursor: pointer;
     background-color: #dda200;
   }
 
@@ -85,6 +88,8 @@
     position: relative;
 
     border-width: 1px;
+
+    transition: 0.2s;
 
     &:hover {
       border-width: 8px;
@@ -108,6 +113,8 @@
     padding: 37px 14px 34px 44px;
 
     opacity: 0;
+
+    transition: 0.2s;
   }
 
   .work__title {
