--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -20,9 +20,16 @@
   background-repeat: no-repeat;
 
   transform: translate(50%, 50%);
+  transition: opacity 0.2s;
 
-  &:hover {
+  &:hover,
+  &:focus {
     cursor: pointer;
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.4;
   }
 }
 
