--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -86,9 +86,11 @@
     padding-top: 72px;
 
     a {
+      transition: 0.2s;
+
       &:hover,
       &:focus {
-        opacity: 0.8;
+        opacity: 0.7;
       }
 
       &:active {
