--- a/source/less/blocks/news-item.less
+++ b/source/less/blocks/news-item.less
@@ -68,16 +68,21 @@
   }
 
   .news-item__link {
+    position: relative;
+    transition: 0.2s;
+
     &::before {
       .pseudo;
       bottom: -4px;
       left: 0;
 
-      display: none;
       width: 100%;
       height: 1px;
 
       background-color: @orange;
+      opacity: 0;
+
+      transition: 0.2s;
     }
 
     &:hover,
@@ -85,7 +90,7 @@
       color: @orange;
 
       &::before {
-        display: block;
+        opacity: 1;
       }
     }
   }
