--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -61,10 +61,12 @@
   font-style: italic;
   color: #000000;
 
+  transition: 0.2s;
+
   &:hover,
   &:focus {
     &::after {
-      display: none;
+      opacity: 0;
     }
   }
 
@@ -81,6 +83,8 @@
     height: 1px;
 
     background-color: #000000;
+
+    transition: 0.2s;
   }
 }
 
