--- a/source/less/blocks/service-card.less
+++ b/source/less/blocks/service-card.less
@@ -49,11 +49,14 @@
       .service-card__image {
         img {
           transform: scale(0.967);
+          transition: 0.2s;
         }
       }
 
       .service-card__title {
         color: @orange;
+
+        transition: 0.2s;
       }
     }
   }
@@ -77,16 +80,20 @@
   .service-card__link {
     position: relative;
 
+    transition: 0.2s;
+
     &::before {
       .pseudo;
       bottom: -4px;
       left: 0;
 
-      display: none;
       width: 100%;
       height: 1px;
 
       background-color: @orange;
+      opacity: 0;
+
+      transition: 0.2s;
     }
 
     &:hover,
@@ -94,7 +101,7 @@
       color: @orange;
 
       &::before {
-        display: block;
+        opacity: 1;
       }
     }
   }
