--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -7,7 +7,7 @@
 
   text-align: center;
 
-  background-image: url("../img/promo-bg.jpg");
+  background-image: url("../img/promo-bg.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
